Repurposed the togglelanguage button to individual buttons, this also makes it easier for new languages to be added

--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
           <li class="nav-item">
             <a class="nav-link" id='menuNightmode'></a>
           </li>
+          <li class="nav-item"> 
+            <a class="nav-link" id='langnl'>NL</a>
+
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" id='langen'>EN</a>
+
+          </li>
           <li class="nav-item">
-            <a class="nav-link" id='menuLanguage'></a>
+            <a class="nav-link" id='langru'>RU</a>
           </li>
         </ul>
       </div>
